tests/ui/abi/unsupported-varargs-fnptr.stderr
error[E0570]: "aapcs" is not a supported ABI for the current target
  --> $DIR/unsupported-varargs-fnptr.rs:12:20
   |
LL | fn aapcs(f: extern "aapcs" fn(usize, ...)) {
   |                    ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0570`.
